--- a/index.html
+++ b/index.html
@@ -4,8 +4,43 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="container px-4">
+        <div class="row g-0">
+          <div class=" bg-light text-dark col-12 col-md-6 col-lg-4 "><div class="p-3"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quod, voluptates sapiente minus enim a porro cum voluptate dignissimos eveniet alias ut incidunt illo doloremque eum delectus. Obcaecati, nostrum vel!</div>
+         </div>
+          <div class=" bg-secondary text-white col-12 col-md-6 col-lg-8"><div class="p-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quod, voluptates sapiente minus enim a porro cum voluptate dignissimos eveniet alias ut incidunt illo doloremque eum delectus. Obcaecati, nostrum vel!</div>
+        </div>
+        <div class="row gy-5">
+            <div class=" bg-primary text-white col-6 col-md-4 ">
+                <div class="p-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quod, voluptates sapiente minus enim a porro cum voluptate dignissimos eveniet alias ut incidunt illo doloremque eum delectus. Obcaecati, nostrum vel!</div> 
+            </div>
+            <div class="bg-success text-white col-6 col-md-4">
+                <div class="p-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quod, voluptates sapiente minus enim a porro cum voluptate dignissimos eveniet alias ut incidunt illo doloremque eum delectus. Obcaecati, nostrum vel!</div>
+            </div>
+            <div class="bg-danger text-white col-12 col-md-4">
+                <div class="p-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quod, voluptates sapiente minus enim a porro cum voluptate dignissimos eveniet alias ut incidunt illo doloremque eum delectus. Obcaecati, nostrum vel!</div>
+            </div>
+            <div class="row gy-5">
+                <div class=" bg-info text-white col-6 col-md-3">
+                    <div class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quod, voluptates sapiente minus enim a porro cum voluptate dignissimos eveniet alias ut incidunt illo doloremque eum delectus. Obcaecati, nostrum vel!</div>
+                </div>
+                <div class="bg-warning text-white col-6 col-md-3">
+                    <div class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quod, voluptates sapiente minus enim a porro cum voluptate dignissimos eveniet alias ut incidunt illo doloremque eum delectus. Obcaecati, nostrum vel!</div>
+                </div>
+                <div class="bg-dark text-white col-6 col-md-3">
+                    <div class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quod, voluptates sapiente minus enim a porro cum voluptate dignissimos eveniet alias ut incidunt illo doloremque eum delectus. Obcaecati, nostrum vel!</div>
+                </div>
+                <div class="bg-light text-dark col-6 col-md-3">
+                    <div class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quod, voluptates sapiente minus enim a porro cum voluptate dignissimos eveniet alias ut incidunt illo doloremque eum delectus. Obcaecati, nostrum vel!</div>
+                </div>
+            </div>
+
+        </div>
+
+      </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
