feat add final details

--- a/index.html
+++ b/index.html
@@ -9,32 +9,32 @@
   <body>
     <div class="container px-4">
         <div class="row g-0">
-          <div class=" bg-light text-dark col-12 col-md-6 col-lg-4 "><div class="p-3"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quod, voluptates sapiente minus enim a porro cum voluptate dignissimos eveniet alias ut incidunt illo doloremque eum delectus. Obcaecati, nostrum vel!</div>
+          <div class=" bg-light text-dark col-12 col-md-6 col-lg-4 "><div class="p-3"> <h1>Colonna 1</h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quod, voluptates sapiente minus enim a porro cum voluptate dignissimos eveniet alias ut incidunt illo doloremque eum delectus. Obcaecati, nostrum vel!</div>
          </div>
-          <div class=" bg-secondary text-white col-12 col-md-6 col-lg-8"><div class="p-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quod, voluptates sapiente minus enim a porro cum voluptate dignissimos eveniet alias ut incidunt illo doloremque eum delectus. Obcaecati, nostrum vel!</div>
+          <div class=" bg-secondary text-white col-12 col-md-6 col-lg-8"><div class="p-3"> <h1>Colonna 2</h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quod, voluptates sapiente minus enim a porro cum </div>
         </div>
         <div class="row gy-5">
             <div class=" bg-primary text-white col-6 col-md-4 ">
-                <div class="p-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quod, voluptates sapiente minus enim a porro cum voluptate dignissimos eveniet alias ut incidunt illo doloremque eum delectus. Obcaecati, nostrum vel!</div> 
+                <div class="p-3"><h1>Colonna 1</h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quod, voluptates sapiente minus enim a porro cum voluptate dignissimos!</div> 
             </div>
             <div class="bg-success text-white col-6 col-md-4">
-                <div class="p-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quod, voluptates sapiente minus enim a porro cum voluptate dignissimos eveniet alias ut incidunt illo doloremque eum delectus. Obcaecati, nostrum vel!</div>
+                <div class="p-3"> <h1>Colonna 2</h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quod, voluptates sapiente minus enim a porro cum voluptate dignissimos!</div>
             </div>
             <div class="bg-danger text-white col-12 col-md-4">
-                <div class="p-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quod, voluptates sapiente minus enim a porro cum voluptate dignissimos eveniet alias ut incidunt illo doloremque eum delectus. Obcaecati, nostrum vel!</div>
+                <div class="p-3"> <h1>Colonna 3</h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quod, voluptates sapiente minus enim a porro cum voluptate dignissimos!</div>
             </div>
             <div class="row gy-5">
                 <div class=" bg-info text-white col-6 col-md-3">
-                    <div class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quod, voluptates sapiente minus enim a porro cum voluptate dignissimos eveniet alias ut incidunt illo doloremque eum delectus. Obcaecati, nostrum vel!</div>
+                    <div class=""> <h1>Colonna 1</h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quod, voluptates sapiente minus enim a porro cum voluptate dignissimos!</div>
                 </div>
                 <div class="bg-warning text-white col-6 col-md-3">
-                    <div class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quod, voluptates sapiente minus enim a porro cum voluptate dignissimos eveniet alias ut incidunt illo doloremque eum delectus. Obcaecati, nostrum vel!</div>
+                    <div class=""><h1>Colonna 2</h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quod, voluptates sapiente minus enim a porro cum voluptate dignissimos!</div>
                 </div>
                 <div class="bg-dark text-white col-6 col-md-3">
-                    <div class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quod, voluptates sapiente minus enim a porro cum voluptate dignissimos eveniet alias ut incidunt illo doloremque eum delectus. Obcaecati, nostrum vel!</div>
+                    <div class=""> <h1>Colonna 3</h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quod, voluptates sapiente minus enim a porro cum voluptate dignissimos!</div>
                 </div>
                 <div class="bg-light text-dark col-6 col-md-3">
-                    <div class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quod, voluptates sapiente minus enim a porro cum voluptate dignissimos eveniet alias ut incidunt illo doloremque eum delectus. Obcaecati, nostrum vel!</div>
+                    <div class=""> <h1>Colonna 4</h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quod, voluptates sapiente minus enim a porro cum voluptate dignissimos!</div>
                 </div>
             </div>
 
